RESOLVED FIXED 262915
NEW TEST (269063@main) [ Sonoma wk2 ] compositing/plugins/pdf/pdf-in-embed-rounded-border.html is constantly failing
https://bugs.webkit.org/show_bug.cgi?id=262915
Summary NEW TEST (269063@main) [ Sonoma wk2 ] compositing/plugins/pdf/pdf-in-embed-ro...
Marta Darbinyan
Reported 2023-10-09 13:15:02 PDT
Created attachment 468126 [details] The diff The test compositing/plugins/pdf/pdf-in-embed-rounded-border.html has been failing on Sonoma wk2 since its introduction at 269063@main. HISTORY: https://results.webkit.org/?suite=layout-tests&test=compositing%2Fplugins%2Fpdf%2Fpdf-in-embed.html IMAGE DIFF: See attachment DIFF URL: https://build.webkit.org/results/Apple-Sonoma-Release-AppleSilicon-WK2-Tests/269075@main%20(206)/compositing/plugins/pdf/pdf-in-embed-rounded-border-diff.png REPRODUCIBILITY: I was able to reproduce this issue on Sonoma ToT using the following commands: python3 Tools/CISupport/download-built-product --platform=mac --debug 'https://s3-us-west-2.amazonaws.com/archives.webkit.org/mac-sonoma-x86_64 arm64-debug/269077@main.zip' python3 Tools/CISupport/built-product-archive --platform=mac-sonoma --debug extract python3 Tools/Scripts/run-webkit-tests --no-build --no-show-results --no-new-test-results --clobber-old-results --debug --results-directory layout-test-results --debug-rwt-logging --no-retry-failures compositing/plugins/pdf/pdf-in-embed-rounded-border.html REGRESSION: This test has been failing since it was introduced at 269063@main.
Attachments
The diff (6.10 KB, image/png)
2023-10-09 13:15 PDT, Marta Darbinyan
no flags
Radar WebKit Bug Importer
Comment 1 2023-10-09 13:15:52 PDT
Simon Fraser (smfr)
Comment 2 2023-10-10 10:39:02 PDT
I need to disable the PDF HUD.
Tim Horton
Comment 3 2023-10-31 12:29:19 PDT
EWS
Comment 4 2023-10-31 16:08:33 PDT
Committed 270035@main (395c75703661): <https://commits.webkit.org/270035@main> Reviewed commits have been landed. Closing PR #19788 and removing active labels.
Philippe Normand
Comment 5 2023-11-12 02:24:50 PST
This introduced a regression, the pdfjs TestOption in WKTR wasn't renamed. See bug 264698
Note You need to log in before you can comment on or make changes to this bug.