NEW TEST (269063@main) [ Sonoma wk2 ] compositing/plugins/pdf/pdf-in-embed-rounded-border.html is constantly failing https://bugs.webkit.org/show_bug.cgi?id=262915 rdar://116696216

Reviewed by Simon Fraser.

* LayoutTests/compositing/plugins/pdf/pdf-in-embed-rounded-border.html:
* LayoutTests/platform/mac-wk2/TestExpectations:
Reenable this test and disable the HUD.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.h:
* Source/WebKit/WebProcess/Plugins/PDF/PDFPlugin.mm:
(WebKit::PDFPlugin::hudEnabled const):
(WebKit::PDFPlugin::visibilityDidChange):
Add a settings knob to disable the PDF HUD.

* Source/WebCore/Scripts/GenerateSettings.rb:
Treat "PDF" as an acronym (currently this list is in three places
and only this one is missing PDF, so we would previously generate
code that wouldn't compile).

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/WebProcess/WebPage/WebPage.cpp:
(WebKit::adjustSettingsForLockdownMode):
Rename PDFJSViewerEnabled setting to use all-caps PDF now that I fixed the generator.

Canonical link: https://commits.webkit.org/270035@main